# gemini-subtitle-generator-translator

./: README.md  README_CN.md  audio_processor_gui.py  combine_transcripts.py  process_audio.py  pyproject.toml  split_audio.py  transcript.py
