[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gemini-subtitle-generator-translator"
version = "0.1.0"
description = "Audio/video transcription and subtitle generation with Google Gemini."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
  "google-genai>=0.6.0",
  "mutagen>=1.47.0",
  "psutil>=5.9.0",
]

[project.optional-dependencies]
full = [
  "librosa>=0.10.0",
  "numpy>=1.23.0",
  "pydub>=0.25.1",
  "soundfile>=0.12.1",
]

[tool.setuptools]
py-modules = [
  "audio_processor_gui",
  "combine_transcripts",
  "process_audio",
  "split_audio",
  "transcript",
  "verify_durations",
]
